# xmlrpc_extended

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  xmlrpc_extended_issues_and_milestones.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api-reference/asgi/: index.html
api-reference/client/: index.html
api-reference/multiprocess/: index.html
api-reference/server/: index.html
architecture/: index.html
benchmarks/: benchmark_all.py  benchmark_asgi.py  benchmark_server.py  index.html
changelog/: index.html
code-of-conduct/: index.html
contributing/: index.html
docs/: architecture.md  benchmarks.md  contributing.md  getting-started.md  index.md  maintainers.md  publishing.md
docs/api-reference/: asgi.md  client.md  multiprocess.md  server.md
docs/stylesheets/: extra.css
docs/user-guide/: asgi.md  client-helpers.md  overload-policies.md  rpc-paths.md  scale-out.md  stats.md
getting-started/: index.html
maintainers/: index.html
publishing/: index.html
search/: search_index.json
security/: index.html
src/xmlrpc_extended/: __init__.py  asgi.py  client.py  multiprocess.py  server.py
tests/: test_asgi.py  test_extras.py  test_server.py
user-guide/asgi/: index.html
user-guide/client-helpers/: index.html
user-guide/overload-policies/: index.html
user-guide/rpc-paths/: index.html
user-guide/scale-out/: index.html
user-guide/stats/: index.html
