[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "xmlrpc_extended"
version = "1.0.0"
description = "Thread-pool powered extensions for Python XML-RPC servers."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "singh-sumit", email = "singhsumit9824@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.optional-dependencies]
# Test runner dependencies (httpx + anyio for ASGI tests)
tests = [
    "pytest>=8.0",
    "coverage[toml]>=7.4",
    "httpx>=0.27",
    "anyio>=4.4",
]
# Local development: pre-commit install && pip install -e ".[dev]"
dev = [
    "pre-commit>=3.7",
    "ruff>=0.15",
    "mypy>=1.10",
    "build>=1.2",
    "pytest>=8.0",
    "coverage[toml]>=7.4",
    "httpx>=0.27",
    "anyio>=4.4",
]
# Documentation: pip install -e ".[docs]" && mkdocs serve
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://singh-sumit.github.io/xmlrpc_extended/"
Repository = "https://github.com/singh-sumit/xmlrpc_extended"
Issues = "https://github.com/singh-sumit/xmlrpc_extended/issues"
Discuss = "https://github.com/singh-sumit/xmlrpc_extended/discussions"
Changelog = "https://github.com/singh-sumit/xmlrpc_extended/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xmlrpc_extended = ["py.typed"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"
